add smaller videos, add mobile meta

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <title>circus lion fight</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     h2 {
       margin-bottom: 10px;
@@ -19,6 +21,15 @@
 
       <video id="video" width="320" height="240" autoplay loop muted>
         <source src="video/1a.mov" type="video/mp4" />
+      </video>
+      <video id="video" width="320" height="240" autoplay loop muted>
+        <source src="video/1aA.mp4" type="video/mp4" />
+      </video>
+      <video id="video" width="320" height="240" autoplay loop muted>
+        <source src="video/1a.mp4" type="video/mp4" />
+      </video>
+      <video id="video" width="320" height="240" autoplay loop muted>
+        <source src="video/1a-.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
         <source src="video/1b.mov" type="video/mp4" />
