--- a/index.html
+++ b/index.html
@@ -20,70 +20,61 @@
       <h2>1</h2>
 
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/1a.mov" type="video/mp4" />
-      </video>
-      <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/1aA.mp4" type="video/mp4" />
-      </video>
-      <video id="video" width="320" height="240" autoplay loop muted>
         <source src="video/1a.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/1a-.mp4" type="video/mp4" />
+        <source src="video/1b.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/1b.mov" type="video/mp4" />
+        <source src="video/1c.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/1c.mov" type="video/mp4" />
-      </video>
-      <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/1d.mov" type="video/mp4" />
+        <source src="video/1d.mp4" type="video/mp4" />
       </video>
     </div>
 
     <div class="round">
       <h2>2</h2>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/2a.mov" type="video/mp4" />
+        <source src="video/2a.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/2b.mov" type="video/mp4" />
+        <source src="video/2b.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/2c.mov" type="video/mp4" />
+        <source src="video/2c.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/2d.mov" type="video/mp4" />
+        <source src="video/2d.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/2e.mov" type="video/mp4" />
+        <source src="video/2e.mp4" type="video/mp4" />
       </video>
     </div>
 
     <div class="round">
       <h2>3</h2>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/3a.mov" type="video/mp4" />
+        <source src="video/3a.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/3b.mov" type="video/mp4" />
+        <source src="video/3b.mp4" type="video/mp4" />
       </video>
     </div>
 
     <div class="round">
       <h2>4</h2>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/4a.mov" type="video/mp4" />
+        <source src="video/4a.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/4b.mov" type="video/mp4" />
+        <source src="video/4b.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/4c.mov" type="video/mp4" />
+        <source src="video/4c.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/4d.mov" type="video/mp4" />
+        <source src="video/4d.mp4" type="video/mp4" />
       </video>
     </div>
 
@@ -95,16 +86,16 @@
     <div class="round">
       <h2>6</h2>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/6a.mov" type="video/mp4" />
+        <source src="video/6a.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/6b.mov" type="video/mp4" />
+        <source src="video/6b.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/6c.mov" type="video/mp4" />
+        <source src="video/6c.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/6d.mov" type="video/mp4" />
+        <source src="video/6d.mp4" type="video/mp4" />
       </video>
     </div>
 
@@ -113,112 +104,112 @@
     <div class="round">
       <h2>7</h2>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/7a.mov" type="video/mp4" />
+        <source src="video/7a.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/7b.mov" type="video/mp4" />
+        <source src="video/7b.mp4" type="video/mp4" />
       </video>
     </div>
 
     <div class="round">
       <h2>8</h2>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/8a.mov" type="video/mp4" />
+        <source src="video/8a.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/8b.mov" type="video/mp4" />
+        <source src="video/8b.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/8c.mov" type="video/mp4" />
+        <source src="video/8c.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/8d.mov" type="video/mp4" />
+        <source src="video/8d.mp4" type="video/mp4" />
       </video>
     </div>
 
     <div class="round">
       <h2>9</h2>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/9a.mov" type="video/mp4" />
+        <source src="video/9a.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/9b.mov" type="video/mp4" />
+        <source src="video/9b.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/9c.mov" type="video/mp4" />
+        <source src="video/9c.mp4" type="video/mp4" />
       </video>
     </div>
 
     <div class="round">
       <h2>10</h2>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/10a.mov" type="video/mp4" />
+        <source src="video/10a.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/10b.mov" type="video/mp4" />
+        <source src="video/10b.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/10c.mov" type="video/mp4" />
+        <source src="video/10c.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/10d.mov" type="video/mp4" />
+        <source src="video/10d.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/10e.mov" type="video/mp4" />
+        <source src="video/10e.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/10f.mov" type="video/mp4" />
+        <source src="video/10f.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/10g.mov" type="video/mp4" />
+        <source src="video/10g.mp4" type="video/mp4" />
       </video>
     </div>
 
     <div class="round">
       <h2>11</h2>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/11a.mov" type="video/mp4" />
+        <source src="video/11a.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/11b.mov" type="video/mp4" />
+        <source src="video/11b.mp4" type="video/mp4" />
       </video>
     </div>
 
     <div class="round">
       <h2>12</h2>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/12a.mov" type="video/mp4" />
+        <source src="video/12a.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/12b.mov" type="video/mp4" />
+        <source src="video/12b.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/12c.mov" type="video/mp4" />
+        <source src="video/12c.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/12d.mov" type="video/mp4" />
+        <source src="video/12d.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/12e.mov" type="video/mp4" />
+        <source src="video/12e.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/12f.mov" type="video/mp4" />
+        <source src="video/12f.mp4" type="video/mp4" />
       </video>
     </div>
 
     <div class="round">
       <h2>13</h2>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/13a.mov" type="video/mp4" />
+        <source src="video/13a.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/13b.mov" type="video/mp4" />
+        <source src="video/13b.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/13c.mov" type="video/mp4" />
+        <source src="video/13c.mp4" type="video/mp4" />
       </video>
       <video id="video" width="320" height="240" autoplay loop muted>
-        <source src="video/13d.mov" type="video/mp4" />
+        <source src="video/13d.mp4" type="video/mp4" />
       </video>
     </div>
   </div>
